优化minio文件存储系统